--- a/New World/AE2/settings.cfg
+++ b/New World/AE2/settings.cfg
@@ -3,7 +3,7 @@
 ~CONFIG_VERSION: rv3-beta-6
 
 counters {
-    I:lastGridStorage=48903
+    I:lastGridStorage=49374
     I:lastPlayer=6
 }
 
@@ -17,8 +17,14 @@ dimensionmanager {
 gridstorage {
     S:2=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvZIABAMP4DdoaAAAA
     S:3=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvdOgXOMAAAgDI7rL4GgAAAA==
-    S:47618=
-    S:48938=
+    S:47618=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvZIABAMP4DdoaAAAA
+    S:48722=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvZIABAMP4DdoaAAAA
+    S:48724=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvZIABAMP4DdoaAAAA
+    S:48786=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvdOgXPcAAAgBvwYqqGgAAAA==
+    S:49160=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvdOgXbWAAAQADy9KlGgAAAA==
+    S:49183=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvdOhXcGAAAQBCX2FOGgAAAA==
+    S:49190=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvZIABAMP4DdoaAAAA
+    S:49203=H4sIAAAAAAAAAONiYGBj4E6tKClKdM1LLUqvZIABAMP4DdoaAAAA
 }
 
 
